<resources>
    <string name="app_name">Bluetooth Chess</string>
    <string name="button_search_connection_nav">Verbindung suchen</string>
    <string name="button_accept_connection_nav">Verbindung annehmen</string>
    <string name="button_save_state_for_enemy_nav">Spielstandsübersicht</string>
    <string name="btn_accept">Akzeptiere</string>
    <string name="btn_delete">Löschen</string>
    <string name="cd_btn_back">nav back to previous screen</string>
    <string name="btn_load">Laden</string>
    <string name="btn_start">Start</string>
    <string name="btn_request">Anfragen</string>
    <string name="btn_rematch">Rematch</string>
    <string name="btn_nav_back_to_main">Zurück zum Hauptmenü</string>
    <string name="btn_request_draw_game">Unentschieden Annehmen</string>
    <string name="btn_accept_draw_game">Unentschieden Annehmeen</string>
    <string name="btn_disconnect">Spiel Abbrechen</string>
</resources>