<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center">

    <Button
        android:id="@+id/btn_search_connection_nav_m"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/button_search_connection_nav" />

    <Button
        android:id="@+id/btn_accept_connection_nav_m"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/button_accept_connection_nav"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_save_state_history_nav_m"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/button_save_state_for_enemy_nav"
        android:layout_marginTop="16dp" />

</LinearLayout>